Fixed position of list titles on small screens, standardized margin treatment on different screen sizes, removed single page header images and list entry images on small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,10 +51,6 @@ html {
 	font-weight: 400;
 }
 
-#site-title {
-	font-size: 2em;
-}
-
 nav#sidebar {
 	margin: 1em 1em;
 	justify-content: space-between;
@@ -64,11 +60,51 @@ nav#sidebar {
 	border-bottom: 2px solid var(--owd-lightgrey);
 }
 
+div#sidebar-nav {
+	color: var(--owd-color);
+	cursor: auto; /* was ist das? */
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	font-size: 0.9em;
+	opacity: 1;
+}
+
+.sidebar-nav-item {
+	margin-left: 1rem;
+}
+
+.sidebar-nav-item:active {
+	border-bottom: 2px solid var(--owd-color);
+}
+
+#site-title {
+	font-size: 2em;
+}
+
+
+main {
+	margin: 2em 25% 0em 25%;
+}
+
+main header {}
+
+#header-title {
+	font-size: 1.65em;
+	/* border-radius: 4px; */
+	/* padding: 0.1rem 0.5rem 0.2rem 0.5rem; */
+	color: var(--owd-color);
+	/* box-shadow: 0px 5px 10px -5px rgba(0,0,0,0.8); */
+}
+
+section {
+	margin: 2em 10% 2em 10%;
+}
+
 .toc-area, .cat-tag-area, #TOC {
 	position: fixed;
 	top: 15%;
-	right: 2em;
-	max-width: 15%;
+	right: 3%;
+	left: 78%;
 	font-family: 'Liberation Sans';
 	font-size: 0.8em;
 	background-color: rgba(255,255,255,1);
@@ -150,176 +186,8 @@ nav#TableOfContents a:focus,
 	color: var(--owd-gold);
 }
 
-header {
-	/* text-align: center; */
-}
-
-#header-title {
-	font-size: 1.65em;
-	/* border-radius: 4px; */
-	/* padding: 0.1rem 0.5rem 0.2rem 0.5rem; */
-	color: var(--owd-color);
-	/* box-shadow: 0px 5px 10px -5px rgba(0,0,0,0.8); */
-}
-
-div#sidebar-nav {
-	color: var(--owd-color);
-	cursor: auto; /* was ist das? */
-	text-transform: uppercase;
-	letter-spacing: 0.1em;
-	font-size: 0.9em;
-	opacity: 1;
-}
-
-.sidebar-nav-item {
-	margin-left: 1rem;
-}
-
-.sidebar-nav-item:active {
-	border-bottom: 2px solid var(--owd-color);
-}
-
-footer {
-	text-align: center;
-	background-image: linear-gradient(to bottom, white 10%, rgba(255,255,255,0.8) 30%, transparent 100%), url("/img/background.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	/* min-height: 20vh; */
-	/* height:  50vh; */
-	/* width: 100%; */
-}
-
-/* #footer-title {
-	color: var(--owd-color);
-	text-transform: uppercase;
-	letter-spacing: 0.1em;
-	font-size: 0.9em;
-} */
-
-.footer-text-area {
-	padding: 2em 5em;
-}
-
-
-.footer-text {
-	font-size: 0.8em;	
-}
-
-.footer-text h1 {
-	color: var(--owd-color);
-	text-transform: uppercase;
-	letter-spacing: 0.1em;
-	font-size: 1.2em;
-	font-weight: normal;
-	margin: 0.2em 0;
-}
-
-.footer-text p {
-	margin: 0 0.2rem;
-	display: inline-block;
-}
-
-#recommended-links ul {
-	display: inline-block;
-	list-style-type: none;
-	text-indent: 0;
-	margin: 0;
-	padding: 0;
-}
-
-#ref-links {
-	font-size: 1.1em;
-	padding: 0.5em;
-	background-color: rgba(255,255,255,0.4);
-	display: inline-block;
-	margin: 0.5em 0;
-}
-
-#copyright {
-	margin: 0.2em 0;
-	display: block;
-	padding: 0.5em 0;
-	border-top: 2px solid var(--owd-lightgrey);
-}
-
-.contact {
-	margin: 1em auto;
-	display: inline-block;
-	padding: 0.5em;
-	background-color: rgba(255,255,255,0.4);
-}
-
-.contact h1 {
-	color: var(--owd-color);
-	/* text-transform: uppercase; */
-	letter-spacing: 0.1em;
-	font-size: 1em;
-	font-weight: normal;
-	margin: 0;
-}
-
-.contact p {
-	margin: 0.3em 0;
-}
-
-.formview {
-	min-width: 400px;
-	width: auto;
-	font-family: inherit;
-	font-size: 0.9em;
-	color: inherit;
-}
-
-input, textarea {
-	border: 2px solid var(--owd-color);
-	padding: 0.5em;
-	font-size: 1em;
-	transition: all 0.3s ease-in-out;
-	line-height: normal;
-	font-family: inherit;
-	width: 80%;
-	margin: 0.2rem;
-}
-
-textarea {
-	min-height: 100px;
-	max-height: 200px
-}
-
-input:focus, textarea:focus {
-	background-color: var(--owd-smokegrey);
-}
-
-button {
-	padding: 1em;
-	background-color: var(--owd-color);
-	color: var(--owd-smokegrey);
-	border: 0;
-	text-transform: uppercase;
-	font-family: inherit;
-}
-
-button:hover {
-	background-color: var(--owd-grey);
-	transition: all 0.3s ease-in-out;
-	cursor: pointer;
-}
-
-main {
-	margin: 5em 25% 0em 25%;
-}
-
 main.article {
-	margin: 0 1em;
-}
-
-main.article article {
-	margin: 0 20%;
-}
-
-section {
-	margin: 2em 10% 2em 10%;
+/* 	margin: 0 1em; */
 }
 
 .article-list {
@@ -348,11 +216,6 @@ section {
 	background-repeat: no-repeat;
 	background-position: right;
 	background-size: 35% auto;
-}
-
-.header-thumb-wrapper {
-	width: 60%;
-	margin: 3em 20% 1em 20%;
 }
 
 .article-text-wrapper, .header-text-wrapper {
@@ -477,6 +340,10 @@ h1.page-title {
 	float: right;
 	text-align: right;
 	margin-left: 1em;
+}
+
+main.article article {
+	/* margin: 0 20%; */
 }
 
 .article-content {
@@ -665,6 +532,149 @@ tfoot {
 	border-top: 1px solid #ccc;
 }
 
+footer {
+	text-align: center;
+	background-image: linear-gradient(to bottom, white 10%, rgba(255,255,255,0.8) 30%, transparent 100%), url("/img/background.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	/* min-height: 20vh; */
+	/* height:  50vh; */
+	/* width: 100%; */
+}
+
+/* #footer-title {
+	color: var(--owd-color);
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	font-size: 0.9em;
+} */
+
+.footer-text-area {
+	padding: 2em 5em;
+}
+
+
+.footer-text {
+	font-size: 0.8em;	
+}
+
+.footer-text h1 {
+	color: var(--owd-color);
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	font-size: 1.2em;
+	font-weight: normal;
+	margin: 0.2em 0;
+}
+
+.footer-text p {
+	margin: 0 0.2rem;
+	display: inline-block;
+}
+
+#recommended-links ul {
+	display: inline-block;
+	list-style-type: none;
+	text-indent: 0;
+	margin: 0;
+	padding: 0;
+}
+
+#ref-links {
+	font-size: 1.1em;
+	padding: 0.5em;
+	background-color: rgba(255,255,255,0.4);
+	display: inline-block;
+	margin: 0.5em 0;
+}
+
+#copyright {
+	margin: 0.2em 0;
+	display: block;
+	padding: 0.5em 0;
+	border-top: 2px solid var(--owd-lightgrey);
+}
+
+.contact {
+	margin: 1em auto;
+	display: inline-block;
+	padding: 0.5em;
+	background-color: rgba(255,255,255,0.4);
+}
+
+.contact h1 {
+	color: var(--owd-color);
+	/* text-transform: uppercase; */
+	letter-spacing: 0.1em;
+	font-size: 1em;
+	font-weight: normal;
+	margin: 0;
+}
+
+.contact p {
+	margin: 0.3em 0;
+}
+
+.formview {
+	min-width: 400px;
+	width: auto;
+	font-family: inherit;
+	font-size: 0.9em;
+	color: inherit;
+}
+
+input, textarea {
+	border: 2px solid var(--owd-color);
+	padding: 0.5em;
+	font-size: 1em;
+	transition: all 0.3s ease-in-out;
+	line-height: normal;
+	font-family: inherit;
+	width: 80%;
+	margin: 0.2rem;
+}
+
+textarea {
+	min-height: 100px;
+	max-height: 200px
+}
+
+input:focus, textarea:focus {
+	background-color: var(--owd-smokegrey);
+}
+
+button {
+	padding: 1em;
+	background-color: var(--owd-color);
+	color: var(--owd-smokegrey);
+	border: 0;
+	text-transform: uppercase;
+	font-family: inherit;
+}
+
+button:hover {
+	background-color: var(--owd-grey);
+	transition: all 0.3s ease-in-out;
+	cursor: pointer;
+}
+
+@media(min-width: 1900px) {
+	html {
+		font-size: 18px;
+	}
+
+	main {
+		margin: 2em 30% 0em 30%;
+	}
+
+    .toc-area, .cat-tag-area, #TOC {
+		right: 8%;
+		left: 78%;
+    }
+
+}
+
 @media(max-width:1200px) {
 	html {
 		font-size: 14px;
@@ -680,28 +690,24 @@ tfoot {
 	}
 
 	main {
-	margin: 5em 5% 0em 5%;
+		margin: 1em 5% 0em 5%;
 	}
 
 	main.article {
-		margin: 0 1em;
+		/* margin: 0 1em; */
 	}
 
 	main.article article {
-		margin: 0 5%;
+		/* margin: 0 5%; */
 	}
 
 	section {
 		margin: 2em 2% 2em 2%;
 	}
 
-	.article-list {
-		margin: 0em 10%;
-	}
-
 	.header-thumb-wrapper {
-		margin: 2em 5% 1em 5%;
-		width: 90%;
+		/* margin: 2em 5% 1em 5%; */
+		/* width: 90%; */
 	}
 
 	.footer-text-area {
@@ -731,6 +737,16 @@ tfoot {
 }
 
 @media(max-width: 600px) {
+	.article-list {
+		/* margin: 0em 10%; */
+	}
+
+	.article-text-wrapper, .header-text-wrapper {
+		width: 100%;
+		background-color: rgba(255,255,255,0.7);
+		padding-right: 0;
+	}	
+
 	.article-content img {
 		width:  100%;
 	}	
